--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<p-chart type="bar" [data]="data"></p-chart>
-
+<!-- <p-chart type="bar" [data]="data"></p-chart> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
