--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,21 @@
-<div>
+<!-- <div class="header-container">
   <img
     width="80"
     style="vertical-align: middle;"
     alt="Angular Logo"
     src="assets/bio-image.jpeg"
   />
-  <span>Vishwanathph.in</span>
+
+  <span class="header-title">Vishwanathph.in</span>
+</div>
+
+<div class="ui-grid">
+  <div class="ui-grid-col-4">Col1</div>
+  <div class="ui-grid-col-4">Col2</div>
+  <div class="ui-grid-col-4">Col2</div>
+</div> -->
+<div class="p-grid p-justify-between p-align-center header-container">
+  <img class="p-col-1" alt="Angular Logo" src="assets/bio-image.jpeg" />
+  <span class="header-title p-col-3">Vishwanathph.in</span>
+  <div class="p-col">3</div>
 </div>
