--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,8 +14,33 @@
   <div class="ui-grid-col-4">Col2</div>
   <div class="ui-grid-col-4">Col2</div>
 </div> -->
-<div class="p-grid p-justify-between p-align-center header-container">
-  <img class="p-col-1" alt="Angular Logo" src="assets/bio-image.jpeg" />
-  <span class="header-title p-col-3">Vishwanathph.in</span>
-  <div class="p-col">3</div>
+<div class="p-grid p-align-center">
+  <img class="p-col-1" alt="Angular Logo" src="assets/bio-image2.jpeg" />
+  <span class="header-title p-col-2">Vishwanathph</span>
+  <div class="p-col-6">
+    <div>
+      <span class="communications-title p-col-1">Contact :</span>
+      <span class="communications-title p-col-1"
+        >vishwanathph@gmail.com / 7022033694</span
+      >
+    </div>
+  </div>
+  <div class="p-col-3 communucations">
+    <div>
+      <span class="communications-title p-col-1">Social</span>
+      <a
+        href="https://www.facebook.com/vishwanath.ph.7"
+        class="fa fa-facebook p-col-1"
+        target="_blank"
+      ></a>
+      <a href="#" class="fa fa-twitter p-col-1"></a>
+      <a href="mailto:vishwanathph@gmail.com" class="fa fa-google p-col-1"></a>
+
+      <a
+        href="https://www.linkedin.com/in/vishwanath-ph/"
+        class="fa fa-linkedin p-col-1"
+        target="_blank"
+      ></a>
+    </div>
+  </div>
 </div>
