skill chart update

--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -1,1 +1,104 @@
-<p>career works!</p>
+<div class="p-grid p-align-center">
+  <p-card class="p-col-4" styleClass="card-container">
+    <h3>About me</h3>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standard dummy text ever since the
+      1500s, when an unknown printer took a galley of type and scrambled it to
+    </p>
+    <h3>Career</h3>
+    <p>
+      Overall 9 Years of Application development experience using Java, HTML,
+      CSS, JavaScript, and XML <br />
+    </p>
+    <ul>
+      <li>
+        5+ experience on Java Application development JSP, Servlets, Swing,
+        Restful services, XML, PostgreSQL.
+      </li>
+      <li>
+        4 experience developing JavaScript Apps .Backend(Node.js) and frontend
+        (AngularJS, Angular (v2, v5))
+      </li>
+    </ul>
+    <h3>Industry Experience</h3>
+    <p>
+      Over the period of 9 years i had pleasure and greater experience with the
+      below companies
+    </p>
+    <div class="p-grid p-align-center">
+      <img
+        width="60"
+        style="vertical-align: middle;"
+        src="assets\wipro.jpg"
+        class="p-col-2"
+      />
+
+      <img
+        width="50"
+        style="vertical-align: middle;"
+        src="assets\USTGlobal.png"
+        class="p-col-2"
+      />
+
+      <img
+        width="40"
+        style="vertical-align: middle;"
+        src="assets\accenture.png"
+        class="p-col-2"
+      />
+
+      <img
+        width="40"
+        style="vertical-align: middle;"
+        src="assets\ge.jpg"
+        class="p-col-2"
+      />
+
+      <img
+        width="40"
+        style="vertical-align: middle;"
+        src="assets\Tech-mahindra.png"
+        class="p-col-2"
+      />
+
+      <img
+        width="40"
+        style="vertical-align: middle;"
+        src="assets\Aricent-Technologies.png"
+        class="p-col-2"
+      />
+    </div>
+    <h3>Technical Experience</h3>
+    I have experience developing system softwares using core Java till
+    2014,where the transition happened to javascript technologies and from there
+    i have been working as a nodejs full stack developer. I have experience in
+    following areas
+    <ul>
+      <li>
+        experience on Java Application development JSP, Servlets, Swing, Restful
+        services, XML, PostgreSQL
+      </li>
+      <li>
+        experience in Node.js Full stack development (Node.js, Angular
+        (v2,v4,v6)) of Monolithic and Microservice apps .
+      </li>
+      <li>Experience in developing SSO Applications Using Node.js.</li>
+      <li>Experience in developing Restful services using Node.js.</li>
+      <li>
+        Experience in developing Microservices using Seneca Microservice
+        framework in Node.js.
+      </li>
+      <li>Having experience on react.js</li>
+    </ul>
+    <p></p>
+  </p-card>
+
+  <p-card class="p-col-4" styleClass="card-container">
+    <h3>skill chart</h3>
+    <app-skill-chart></app-skill-chart>
+  </p-card>
+  <p-card class="p-col-4" styleClass="card-container">
+    <h3>Tutoring</h3>
+  </p-card>
+</div>
