treetable structure updated

--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -1,5 +1,5 @@
-<div class="p-grid p-align-center">
-  <p-card class="p-col-4" styleClass="card-container">
+<div class="p-grid">
+  <p-card class="p-col-6" styleClass="card-container">
     <h3>About me</h3>
     <p>
       Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -91,14 +91,22 @@
       </li>
       <li>Having experience on react.js</li>
     </ul>
+    <h3>Tutoring</h3>
+    <ul>
+      <li>Java</li>
+      <li>Javascript</li>
+      <li>Node.js</li>
+      <li>Angular</li>
+      <li>MongoDB</li>
+      <li>OOAD and Design Patterns</li>
+    </ul>
     <p></p>
   </p-card>
 
-  <p-card class="p-col-4" styleClass="card-container">
+  <p-card class="p-col-6" styleClass="card-container">
     <h3>skill chart</h3>
     <app-skill-chart></app-skill-chart>
-  </p-card>
-  <p-card class="p-col-4" styleClass="card-container">
-    <h3>Tutoring</h3>
+    <h3>Skill Table</h3>
+    <app-skill-table></app-skill-table>
   </p-card>
 </div>
