--- a/src/app/skill-table/skill-table.component.html
+++ b/src/app/skill-table/skill-table.component.html
@@ -1,1 +1,19 @@
-<p>skill-table works!</p>
+<p-treeTable [value]="files">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Name</th>
+      <th>Size</th>
+      <th>Type</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
+    <tr>
+      <td>
+        <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
+        {{ rowData.name }}
+      </td>
+      <td>{{ rowData.size }}</td>
+      <td>{{ rowData.type }}</td>
+    </tr>
+  </ng-template>
+</p-treeTable>
