--- a/src/app/tech-dairy/tech-dairy.component.html
+++ b/src/app/tech-dairy/tech-dairy.component.html
@@ -1,1 +1,65 @@
-<img src="assets/page-under-construction.png" />
+<h3>HTML</h3>
+
+<h3>CSS</h3>
+
+<h3>Javascript</h3>
+
+<h3>Angular</h3>
+
+<h3>React</h3>
+
+<h3>GraphQL</h3>
+
+<h3>Node.js</h3>
+
+<h3>Webpage design related</h3>
+
+<h3>Mobile Apps / Hybrid Apps related</h3>
+<h3>Amazon web services</h3>
+
+<h3>chat App related</h3>
+
+<h3>Data structures and Algorithms</h3>
+
+<h3>DevOps</h3>
+
+<h3>Security</h3>
+
+<h3>Interview Questions</h3>
+
+<h3>Animation and video</h3>
+
+<h3>UnOrganized links</h3>
+
+<ul>
+  <li *ngFor="let unOrganizedLink of unOrganizedLinks">
+    <a href="{{ unOrganizedLink.url }}">{{ unOrganizedLink.title }}</a>
+  </li>
+</ul>
+
+<h3>Javascript</h3>
+Useful Links:
+<ul>
+  <li></li>
+</ul>
+<h3>Angular</h3>
+<h2>REACT</h2>
+<h3>React main Links</h3>
+<ul>
+  <li *ngFor="let reactLink of reactMainLinks">
+    <a href="{{ reactLink.url }}">{{ reactLink.title }}</a>
+  </li>
+</ul>
+
+<h3>React Concepts</h3>
+<ul>
+  <li *ngFor="let reactLink of reactConceptsLinks">
+    <a href="{{ reactLink.url }}">{{ reactLink.title }}</a>
+  </li>
+</ul>
+<h3>Mongodb</h3>
+
+<h3>Node.js</h3>
+<h3>My daily visits to sites</h3>
+<h3>Useful Links</h3>
+<h3>My Book marked sites for learning</h3>
