personal and projects page updated

--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -1,1 +1,22 @@
-<img src="assets/page-under-construction.png" />
+<h3>About me</h3>
+<p>
+  My name is vishwanath as you might have guessed :).i am a Electronics and
+  communication engineer by graduation and a sofware Engineer by profession.I
+  can talk in Telugu, Tamil , English I am an explorer in all aspects , be it
+  Life ,places ,Technology . i always want to know more which motivates me to
+  Explore.
+</p>
+
+<h3>Hobbies</h3>
+<p>
+  I have hobbies such as creating skits , playing jokes , reading books
+  ,spending time talking about sensible topic I also have hobbies of playing
+  sports,be it any.
+</p>
+
+<h3>Fun time</h3>
+Apart from hobbies,my fun time is spending with family.
+
+<h3>Friends</h3>
+I am blessed with a pack of good friends all through my life (especially my
+childhood) who cares, guides me in required situations.
