--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,43 @@
-<img src="assets/page-under-construction.png" />
+<h3>Project Experience summary</h3>
+<p>
+  I have 9+ years of experience working in industry projects.I have experience
+  developing softwares for healthcare devices, networking devices using Java.I
+  also have experience developing e-commerce website using Java and associated
+  web technolofies. I have also worked in Telecommunication web App development
+  projects using node.js ,microservice architecture and associated front end
+  technologies such as Angular,react,etc
+</p>
+find below the details on projects
+<h3>Industry Projects</h3>
+
+<p-card
+  class="p-col-12"
+  styleClass="card-container"
+  header="Managed printer Services "
+>
+  This is an Printer service provider Application to manage print services and
+  onboarding of printer devices. My Role is an
+  <b>Application developer</b> where front end is <b>React.js</b> and the
+  backend is <b>Node.js</b> and API style is
+  <b>GraphQL.</b>
+</p-card>
+
+<p-card class="p-col-12" styleClass="card-container" header="CCE">
+  This is a <b>Health care application </b>which is used for B2B clients, where
+  services of business apps can be used by other business apps.My Role is
+
+  <b>Application Lead</b> where front end is <b>Angular</b> and the backend is
+  <b>Node.js</b> for BFF and API style is <b>REST.</b>.I have also involved in
+  Creating CI/CD Pipeline which involves Building Docker Image and Deployment of
+  app in Azure DevOps
+</p-card>
+
+<p-card class="p-col-12" styleClass="card-container" header="MobileEBPP">
+  This is a <b>Health care application </b>which is used for B2B clients, where
+  services of business apps can be used by other business apps.My Role is
+
+  <b>Application Lead</b> where front end is <b>Angular</b> and the backend is
+  <b>Node.js</b> for BFF and API style is <b>REST.</b>.I have also involved in
+  Creating CI/CD Pipeline which involves Building Docker Image and Deployment of
+  app in Azure DevOps
+</p-card>
