--- a/src/app/travel-log/travel-log.component.html
+++ b/src/app/travel-log/travel-log.component.html
@@ -2,22 +2,50 @@
 <div class="p-grid">
   <p-card styleClass="card-container" header="Karnataka" class="p-col-12">
     <div class="p-grid">
-      <div class="p-col-2" *ngFor="let imageDetail of imageObject">
+      <div class="p-col-2" *ngFor="let imageDetail of karnatakaImageObject">
         <img
           [src]="imageDetail.url"
           (click)="showDialog(imageDetail)"
           width="100%"
         />
-        <span>{{ imageDetail.name }}</span>
+        <span style="text-align: center;">{{ imageDetail.name }}</span>
       </div>
     </div>
   </p-card>
-  <p-card styleClass="card-container" header="Kerala" class="p-col-12"> </p-card
+  <p-card styleClass="card-container" header="Kerala" class="p-col-12">
+    <div class="p-grid">
+      <div class="p-col-2" *ngFor="let imageDetail of keralaImageObject">
+        <img
+          [src]="imageDetail.url"
+          (click)="showDialog(imageDetail)"
+          width="100%"
+        />
+        <span style="text-align: center;">{{ imageDetail.name }}</span>
+      </div>
+    </div> </p-card
   ><p-card styleClass="card-container" header="TamilNadu" class="p-col-12">
+    <div class="p-grid">
+      <div class="p-col-2" *ngFor="let imageDetail of tamilnaduImageObject">
+        <img
+          [src]="imageDetail.url"
+          (click)="showDialog(imageDetail)"
+          width="100%"
+        />
+        <span style="text-align: center;">{{ imageDetail.name }}</span>
+      </div>
+    </div>
   </p-card>
   <p-card styleClass="card-container" header="Andhra Pradesh" class="p-col-12">
-  </p-card>
-  <p-card styleClass="card-container" header="Telangana" class="p-col-12">
+    <div class="p-grid">
+      <div class="p-col-2" *ngFor="let imageDetail of andhraImageObject">
+        <img
+          [src]="imageDetail.url"
+          (click)="showDialog(imageDetail)"
+          width="100%"
+        />
+        <span style="text-align: center;">{{ imageDetail.name }}</span>
+      </div>
+    </div>
   </p-card>
 </div>
 
