--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
 <div class="p-grid p-align-center">
   <img class="p-col-1" alt="Angular Logo" src="assets/bio-image2.jpeg" />
   <span class="header-title p-col-2">Vishwanathph</span>
-  <div class="p-col-6">
+  <div class="p-col-7">
     <div>
       <span class="communications-title p-col-1">Contact :</span>
       <span class="communications-title p-col-1"
@@ -25,17 +25,19 @@
       >
     </div>
   </div>
-  <div class="p-col-3 communucations">
+  <div class="p-col-2 communucations">
     <div>
-      <span class="communications-title p-col-1">Social</span>
+      <span class="communications-title p-col-2"></span>
       <a
         href="https://www.facebook.com/vishwanath.ph.7"
         class="fa fa-facebook p-col-1"
         target="_blank"
       ></a>
-      <a href="#" class="fa fa-twitter p-col-1"></a>
-      <a href="mailto:vishwanathph@gmail.com" class="fa fa-google p-col-1"></a>
-
+      <a
+        href="https://github.com/vish-git"
+        class="fa fa-github p-col-1"
+        target="_blank"
+      ></a>
       <a
         href="https://www.linkedin.com/in/vishwanath-ph/"
         class="fa fa-linkedin p-col-1"
