tech dairy modularized

--- a/src/app/tech-dairy/tech-dairy.component.html
+++ b/src/app/tech-dairy/tech-dairy.component.html
@@ -1,178 +1,1 @@
-<div class="p-grid">
-  <p-card class="p-col-6" styleClass="card-container" header="HTML">
-    <ul>
-      <li *ngFor="let htmlReferenceLink of htmlReferenceLinks">
-        <a href="{{ htmlReferenceLink.url }}">{{ htmlReferenceLink.title }}</a>
-      </li>
-    </ul>
-  </p-card>
-  <p-card class="p-col-6" styleClass="card-container" header="CSS">
-    <ul>
-      <li *ngFor="let cssReferenceLink of cssReferenceLinks">
-        <a href="{{ cssReferenceLink.url }}">{{ cssReferenceLink.title }}</a>
-      </li>
-    </ul>
-  </p-card>
-  <p-card class="p-col-6" styleClass="card-container" header="Javascript">
-    <ul>
-      <li *ngFor="let javascriptReferenceLink of javascriptReferenceLinks">
-        <a href="{{ javascriptReferenceLink.url }}">{{
-          javascriptReferenceLink.title
-        }}</a>
-      </li>
-    </ul>
-  </p-card>
-  <p-card class="p-col-6" styleClass="card-container" header="Angular">
-  </p-card>
-  <p-card class="p-col-6" styleClass="card-container" header="React">
-    <ul>
-      <li *ngFor="let reactReferenceLink of reactReferenceLinks">
-        <a href="{{ reactReferenceLink.url }}">{{
-          reactReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card class="p-col-6" styleClass="card-container" header="GraphQL">
-    <ul>
-      <li *ngFor="let graphqlReferenceLink of graphqlReferenceLinks">
-        <a href="{{ graphqlReferenceLink.url }}">{{
-          graphqlReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card class="p-col-6" styleClass="card-container" header="Node.js">
-    <ul>
-      <li *ngFor="let nodejsReferenceLink of nodejsReferenceLinks">
-        <a href="{{ nodejsReferenceLink.url }}">{{
-          nodejsReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card class="p-col-6" styleClass="card-container" header="Nest.js">
-    <ul>
-      <li *ngFor="let nestjsReferenceLink of nestjsReferenceLinks">
-        <a href="{{ nestjsReferenceLink.url }}">{{
-          nestjsReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card class="p-col-6" styleClass="card-container" header="Typescript">
-    <ul>
-      <li *ngFor="let typescriptReferenceLink of typescriptReferenceLinks">
-        <a href="{{ typescriptReferenceLink.url }}">{{
-          typescriptReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="Webpage design related"
-  >
-    <ul>
-      <li
-        *ngFor="let webpagedesignReferenceLink of webpagedesignReferenceLinks"
-      >
-        <a href="{{ webpagedesignReferenceLink.url }}">{{
-          webpagedesignReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="Mobile Apps / Hybrid Apps related"
-  >
-    <ul>
-      <li *ngFor="let mobileAppsReferenceLink of mobileAppsReferenceLinks">
-        <a href="{{ mobileAppsReferenceLink.url }}">{{
-          mobileAppsReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="Amazon web services"
-  >
-    <ul>
-      <li *ngFor="let awsReferenceLink of awsReferenceLinks">
-        <a href="{{ awsReferenceLink.url }}">{{ awsReferenceLink.title }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="chat App related"
-  >
-    <ul>
-      <li *ngFor="let chatAppReferenceLink of chatAppReferenceLinks">
-        <a href="{{ chatAppReferenceLink.url }}">{{
-          chatAppReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card class="p-col-6" styleClass="card-container" header="DevOps">
-    <ul>
-      <li
-        *ngFor="let devopsandCICDReferenceLink of devopsandCICDReferenceLinks"
-      >
-        <a href="{{ devopsandCICDReferenceLink.url }}">{{
-          devopsandCICDReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="Web App Security"
-  >
-    <ul>
-      <li
-        *ngFor="let webAppSecurityReferenceLink of webAppSecurityReferenceLinks"
-      >
-        <a href="{{ webAppSecurityReferenceLink.url }}">{{
-          webAppSecurityReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="Interview Questions"
-  >
-    <ul>
-      <li
-        *ngFor="
-          let interviewQuestionReferenceLink of interviewQuestionReferenceLinks
-        "
-      >
-        <a href="{{ interviewQuestionReferenceLink.url }}">{{
-          interviewQuestionReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="Animation and video"
-  >
-    <ul>
-      <li *ngFor="let animationReferenceLink of animationReferenceLinks">
-        <a href="{{ animationReferenceLink.url }}">{{
-          animationReferenceLink.title
-        }}</a>
-      </li>
-    </ul> </p-card
-  ><p-card
-    class="p-col-6"
-    styleClass="card-container"
-    header="UnOrganized links"
-  >
-    <ul>
-      <li *ngFor="let unOrganizedLink of unOrganizedLinks">
-        <a href="{{ unOrganizedLink.url }}">{{ unOrganizedLink.title }}</a>
-      </li>
-    </ul>
-  </p-card>
-</div>
+<app-technical-references></app-technical-references>
