--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,13 +16,24 @@
 </div> -->
 <div class="p-grid p-align-center">
   <img class="p-col-1" alt="Angular Logo" src="assets/bio-image2.jpeg" />
-  <span class="header-title p-col-2">Vishwanathph</span>
-  <div class="p-col-7">
-    <div>
+  <span class="header-title p-col-3">Vishwanathph</span>
+  <div class="p-col-6">
+    <!-- <div>
       <span class="communications-title p-col-1">Contact :</span>
       <span class="communications-title p-col-1"
         >vishwanathph@gmail.com / 7022033694</span
       >
+    </div> -->
+
+    <div class="contacts">
+      <span class="p-col-2 fa fa-whatsapp"> </span>
+      <span class="whatsapp">7022033694 </span> |
+
+      <span class="p-col-2 fa fa-phone" aria-hidden="true"></span>
+      <span class="phone">7022033694 </span> |
+
+      <span class="p-col-2 fa fa-envelope" aria-hidden="true"></span>
+      <span class="email">vishwanathph@gmail.com </span>
     </div>
   </div>
   <div class="p-col-2 communucations">
