--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -24,8 +24,8 @@ img {
 
 .fa {
   /* padding: 20px;*/
-  font-size: 30px;
-  width: 40px;
+  font-size: 20px;
+  width: 35px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
@@ -59,6 +59,34 @@ img {
 .fa-youtube {
   background: #bb0000;
   color: white;
+}
+
+.fa-whatsapp, .fa-phone {
+  font-size: 20px;
+  width: 20px;
+  color: green;
+}
+
+.fa-envelope {
+  font-size: 20px;
+  width: 20px;
+  color: green
+}
+
+.whatsapp, .phone {
+  font-size: 18px;
+  padding-left: 5px;
+  color: green;
+}
+
+.email {
+  font-size: 18px;
+  padding-left: 10px;
+  color: green;
+}
+
+.contacts {
+  float: right !important;
 }
 
 .fa-instagram {
