career page cleaned up

--- a/src/app/tech-dairy/tech-dairy.component.html
+++ b/src/app/tech-dairy/tech-dairy.component.html
@@ -1,1 +1,92 @@
+<div class="p-grid">
+  <p-card class="p-col-3" header="Focus areas">
+    <ul>
+      <li>
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+          target="_blank"
+          >Javascript</a
+        >
+      </li>
+      <li>
+        <a href="https://angular.io/" target="_blank">Angular</a>
+      </li>
+      <li>
+        <a href="https://reactjs.org/" target="_blank">React.js</a>
+      </li>
+      <li>
+        <a href="https://nodejs.org/en/" target="_blank">Node.js </a>
+      </li>
+      <li>
+        <a href=" https://www.mongodb.com/" target="_blank">MongoDB</a>
+      </li>
+      <li>
+        <a href="https://spring.io/" target="_blank">Spring</a>
+      </li>
+    </ul>
+  </p-card>
+  <p-card class="p-col-3" header="Software programming and architecture styles">
+    <ul>
+      <li>
+        <a href="https://12factor.net/" target="_blank"
+          >The Twelve-Factor App</a
+        >
+      </li>
+      <li>
+        <a href="https://microservices.io/" target="_blank">Microservices</a>
+      </li>
+      <li>
+        <a href="https://www.oodesign.com/" target="_blank"
+          >OOAD and Design patterns</a
+        >
+      </li>
+    </ul>
+  </p-card>
+
+  <p-card class="p-col-3" header="Domians and protocols">
+    <ul>
+      <li>
+        <a href="https://www.websocket.org/" target="_blank">WebSocket</a>
+      </li>
+      <li>
+        <a href="https://webrtc.org/" target="_blank">WebRTC</a>
+      </li>
+    </ul>
+  </p-card>
+  <p-card class="p-col-3" header="Daily visits">
+    <ul>
+      <li>
+        <a href="https://subscription.packtpub.com/">Packtpub</a>
+      </li>
+    </ul>
+  </p-card>
+  <p-card class="p-col-4" header="Frameworks Tools and libraries">
+    <ul>
+      <li>
+        <a href="https://redux.js.org/">Redux</a>
+      </li>
+      <li>
+        <a href="https://webpack.js.org/">Webpack</a>
+      </li>
+      <li>
+        <a href="https://eslint.org/">ESlint</a>
+      </li>
+      <li>
+        <a href="https://babeljs.io/">Babel</a>
+      </li>
+      <li>
+        <a href="https://www.typescriptlang.org/">Typescript</a>
+      </li>
+    </ul>
+  </p-card>
+
+  <!-- <p-card class="p-col-4" header="My codebits">
+    <ul>
+      <li>
+        <a href="https://subscription.packtpub.com/">Packtpub</a>
+      </li>
+    </ul>
+  </p-card> -->
+</div>
+
 <app-technical-references></app-technical-references>
