--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -2,14 +2,14 @@
   <p-card class="p-col-6" styleClass="card-container">
     <h3>About me</h3>
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
+      I am a Technical evangelist having 9+ years of industry experience .I have
+      take up freelance assignments and also tutored on JavaScript technologies.
     </p>
     <h3>Career</h3>
     <p>
-      Overall 9 Years of Application development experience using Java, HTML,
-      CSS, JavaScript, and XML <br />
+      Overall, 9 Years of Application development experience using Java, HTML,
+      CSS, JavaScript, and XML
+      <br />
     </p>
     <ul>
       <li>
@@ -17,8 +17,8 @@
         Restful services, XML, PostgreSQL.
       </li>
       <li>
-        4 experience developing JavaScript Apps .Backend(Node.js) and frontend
-        (AngularJS, Angular (v2, v5))
+        4 experience developing JavaScript Apps. Backend (Node.js) and frontend
+        (AngularJS, Angular, React)
       </li>
     </ul>
     <h3>Industry Experience</h3>
@@ -28,31 +28,35 @@
     </p>
     <div class="p-grid p-align-center">
       <img
-        width="60"
+        width="10%"
+        height="30%"
         style="vertical-align: middle;"
         src="assets\wipro.jpg"
         class="p-col-2"
       />
 
       <img
-        width="50"
+        width="100%"
+        height="50%"
         style="vertical-align: middle;"
         src="assets\USTGlobal.png"
         class="p-col-2"
       />
 
       <img
-        width="40"
+        width="100%"
+        height="50%"
         style="vertical-align: middle;"
         src="assets\accenture.png"
         class="p-col-2"
       />
 
       <img
-        width="40"
+        width="100%"
+        height="40%"
         style="vertical-align: middle;"
         src="assets\ge.jpg"
-        class="p-col-2"
+        class="p-col-1"
       />
 
       <img
@@ -70,10 +74,11 @@
       />
     </div>
     <h3>Technical Experience</h3>
-    I have experience developing system softwares using core Java till
-    2014,where the transition happened to javascript technologies and from there
-    i have been working as a nodejs full stack developer. I have experience in
+    I have experience developing system software’s using core Java till 2014,
+    where the transition happened to JavaScript technologies and from there i
+    have been working as a NodeJS full stack developer. I have experience in
     following areas
+
     <ul>
       <li>
         experience on Java Application development JSP, Servlets, Swing, Restful
