deploy ready site

--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -109,7 +109,7 @@
   </p-card>
 
   <p-card class="p-col-6" styleClass="card-container">
-    <h3>skill chart</h3>
+    <h3>Skill chart</h3>
     <app-skill-chart></app-skill-chart>
     <h3>Skill Table</h3>
     <app-skill-table></app-skill-table>
