--- a/src/app/industry-projects/industry-projects.component.html
+++ b/src/app/industry-projects/industry-projects.component.html
@@ -25,7 +25,7 @@
   </p-card>
 
   <p-card class="p-col-12" styleClass="card-container" header="MobileEBPP">
-    This is a <b>Telecom provider web/Mobile application </b> used to provide a
+    This is a <b>Telecom provider Web/Mobile application </b> used to provide a
     platform for the subscribers to view/manage their subscription.This app is
     implemented using <b>Microservices architecture</b> style. My role is a
     <b>Module lead </b> where front end is <b>Angular </b> and the backend is
@@ -84,11 +84,11 @@
     styleClass="card-container"
     header="Image Management Browser"
   >
-    This is a <b>Helthcare provider application </b> involves a Swing based
+    This is a <b>Healthcare provider application </b> involves a Swing based
     stand-alone application facilitating radiologist to examine and handle a
     patient’s image scan providing flexibility to navigate, modify and transfer
     images. My role is <b>Java Application developer</b> using Netbeans RCP
-    platform and technolgies used are <b>OSGI and Apache Karaf</b> Unit testing
+    platform and technologies used are <b>OSGI and Apache Karaf</b> Unit testing
     is done using <b>Junit</b>
   </p-card>
 
