--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,10 +1,10 @@
 <p-card styleClass="card-container" header="Project Experience summary ">
-  I have 9+ years of experience working in industry projects.I have experience
-  developing softwares for healthcare devices, networking devices using Java.I
+  I have 9+ years of experience working in industry projects. I have experience
+  developing software’s for healthcare devices, networking devices using Java. I
   also have experience developing e-commerce website using Java and associated
-  web technolofies. I have also worked in Telecommunication web App development
-  projects using node.js ,microservice architecture and associated front end
-  technologies such as Angular,react,etc
+  web technologies. I have also worked in Telecommunication web App development
+  projects using node.js, microservice architecture and associated front end
+  technologies such as Angular, react, etc
 </p-card>
 
 <h3></h3>
