--- a/src/app/tech-dairy/tech-dairy.component.html
+++ b/src/app/tech-dairy/tech-dairy.component.html
@@ -1,5 +1,5 @@
 <div class="p-grid">
-  <p-card class="p-col-3" header="Focus areas">
+  <p-card class="p-col-3" styleClass="card-container" header="Focus areas">
     <ul>
       <li>
         <a
@@ -25,7 +25,11 @@
       </li>
     </ul>
   </p-card>
-  <p-card class="p-col-3" header="Software programming and architecture styles">
+  <p-card
+    class="p-col-3"
+    styleClass="card-container"
+    header="Software programming and architecture styles"
+  >
     <ul>
       <li>
         <a href="https://12factor.net/" target="_blank"
@@ -43,7 +47,11 @@
     </ul>
   </p-card>
 
-  <p-card class="p-col-3" header="Domians and protocols">
+  <p-card
+    class="p-col-3"
+    styleClass="card-container"
+    header="Domians and protocols"
+  >
     <ul>
       <li>
         <a href="https://www.websocket.org/" target="_blank">WebSocket</a>
@@ -53,14 +61,18 @@
       </li>
     </ul>
   </p-card>
-  <p-card class="p-col-3" header="Daily visits">
+  <p-card class="p-col-3" styleClass="card-container" header="Daily visits">
     <ul>
       <li>
         <a href="https://subscription.packtpub.com/">Packtpub</a>
       </li>
     </ul>
   </p-card>
-  <p-card class="p-col-4" header="Frameworks Tools and libraries">
+  <p-card
+    class="p-col-4"
+    styleClass="card-container"
+    header="Frameworks Tools and libraries"
+  >
     <ul>
       <li>
         <a href="https://redux.js.org/">Redux</a>
@@ -87,6 +99,7 @@
       </li>
     </ul>
   </p-card> -->
+  <p-card class="p-col-3" header="My Bookmarks" styleClass="card-container">
+    <app-technical-references></app-technical-references>
+  </p-card>
 </div>
-
-<app-technical-references></app-technical-references>
