--- a/src/app/technical-references/technical-references.component.html
+++ b/src/app/technical-references/technical-references.component.html
@@ -1,4 +1,4 @@
-<a (click)="showDialog()">My Technical references</a>
+<a (click)="showDialog()">Click here to view Bookmarks</a>
 
 <p-dialog
   header="My Technical references"
