--- a/src/app/travel-log/travel-log.component.html
+++ b/src/app/travel-log/travel-log.component.html
@@ -56,7 +56,7 @@
   [maximizable]="true"
 >
   <div class="p-grid">
-    <img [src]="imageUrl" width="100%" class="p-col-6" />
-    <div class="p-col-6">{{ imageDesc }}</div>
+    <img [src]="imageUrl" width="100%" class="p-col-12" />
+    <!-- <div class="p-col-6">{{ imageDesc }}</div> -->
   </div>
 </p-dialog>
